2018-05-14  Carl Hetherington  <cth@carlh.net>

	* Fix invalid timings in SMPTE subtitle files (causing failure to play subtitles)
	in some cases (#1293).

2018-04-19  Carl Hetherington  <cth@carlh.net>

	* Fix crash on making a DCP after trimming the end of some text-based subtitles (#1275).

2018-04-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.4 released.

2018-04-13  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect preview crop with DCP sources when the preview is smaller than half
	of the DCP's resolution (#1274).

2018-04-12  Carl Hetherington  <cth@carlh.net>

	* Prevent error when starting export without specifying a filename (#1260).

2018-04-11  Carl Hetherington  <cth@carlh.net>

	* Fix 3D DCP handling in the player.

2018-04-10  Carl Hetherington  <cth@carlh.net>

	* Fix disappearing subtitles when they are added from text files
	alongside video content which also contain subtitles (#1271).

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Fix crash on startup if there are no audio devices (#1265).

	* Fix missing start icon for the player in Linux.

	* Fix 3D DCP handling in the player.

2018-04-05  Carl Hetherington  <cth@carlh.net>

	* Updated zh_CN translation from 刘汉源.

2018-03-25  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.3 released.

2018-03-24  Carl Hetherington  <cth@carlh.net>

	* Fix crash when changing DCP audio channel count (#1253).

	* Fix update checker error when there is no test
	version.

	* Updated fr_FR translation from Thierry Journet.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.2 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Version 2.12.1 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.12.0 released.

2018-03-22  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.79 released.

2018-03-21  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.
